2002-08-12  Tim Coleman <tim@timcoleman.com>
	* ServiceDescriptionBaseCollection.cs:
		Only add an element to the hashtable if its GetKey ()
		method does not return null. 

2002-08-09  Tim Coleman <tim@timcoleman.com>
	* BindingCollection.cs: 
	* ServiceDescriptionCollection.cs: 
		Implement Set indexer
	* FaultBindingCollection.cs:
	* MessageCollection.cs:
	* MessagePartCollection.cs:
	* OperationFaultCollection.cs:
	* PortCollection.cs:
	* PortTypeCollection.cs:
	* ServiceCollection.cs:
		Implement Set indexer, code cleanup
	* Message.cs:
		Implement FindPartByName ()
	* OperationMessageCollection.cs:
		Alter OnSet () method
	* ServiceDescriptionBaseCollection.cs:
		Implement some methods.
	* ServiceDescriptionFormatExtensionCollection.cs:
		Implement Find (), FindAll (), OnValidate () methods
		

2002-08-06  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Add namespace definitions when serializing.
	* HttpBinding.cs:
		Change namespace definition (wsdl was spelt wsld)

2002-08-06  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Change the XmlElement name from "type" to "types" for
		the Types object

2002-08-06  Tim Coleman <tim@timcoleman.com>
	* ServerProtocol.cs:
		Add new class as implied by class statuc page.
		SoapServerProtocol is derived from this.
	* SoapServerProtocol.cs:
		Change base class to ServerProtocol.
	* SoapClientMethod.cs:
		This class should not be sealed.

2002-08-03  Tim Coleman <tim@timcoleman.com>
	* SoapProtocolReflector.cs:
		Removed SoapBinding property and made the class
		not sealed to agree with class reference page.

2002-08-03  Tim Coleman <tim@timcoleman.com>
	* ServiceDescriptionBaseCollection.cs:
		Removed some NotImplementedException()'s so that
		it runs.

2002-07-26  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Changed the creation of the XmlSerializer after 
		consulting the System.Xml.Serialization namespace
		and trying to serialize a document.  Now works somewhat!
